<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.vaibhavdhunde.app.elearning.ui.login.LoginViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/activity_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.login.LoginActivity">

        <ScrollView
            android:id="@+id/login_scroll_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/login_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ProgressBar
                    android:id="@+id/progress_indicator"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="24dp"
                    android:visibility="@{viewmodel.dataLoading ? View.VISIBLE : View.GONE}"
                    tools:visibility="gone" />

                <ImageView
                    android:id="@+id/app_logo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/app_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/input_bg"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="12dp"
                    android:enabled="@{!viewmodel.dataLoading}"
                    android:hint="@string/hint_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLength="255"
                    android:padding="16dp"
                    android:text="@={viewmodel.email}" />

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/input_bg"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="12dp"
                    android:enabled="@{!viewmodel.dataLoading}"
                    android:hint="@string/hint_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:padding="16dp"
                    android:text="@={viewmodel.password}" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:enabled="@{!viewmodel.dataLoading}"
                    android:onClick="@{() -> viewmodel.loginUser()}"
                    android:text="@string/login" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_register_here"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:enabled="@{!viewmodel.dataLoading}"
                    android:onClick="@{() -> viewmodel.registerUser()}"
                    android:text="@string/register_here"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />

            </LinearLayout>

        </ScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>