...
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:padding="16dp"
                    android:text="@={viewmodel.confPassword}" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:enabled="@{!viewmodel.dataLoading}"
                    android:onClick="@{() -> viewmodel.registerUser()}"
                    android:text="@string/register"
...
